tried to fix the cropper

--- a/public/stylesheets/compiled/homepage.css
+++ b/public/stylesheets/compiled/homepage.css
@@ -528,7 +528,7 @@ h2.moto strong {
   padding: 45px 0;
   text-align: left;
   margin: 0;
-  background: transparent url('/images/homepage/home-separator.png?1319722016') center top no-repeat;
+  background: transparent url('/images/homepage/home-separator.png?1319018090') center top no-repeat;
   color: #828282  !important;
 }
 /* line 73, ../../../app/stylesheets/homepage.scss */
@@ -701,7 +701,7 @@ h2.moto strong {
   width: 84px;
   height: 41px;
   margin: 20px auto 0;
-  background: transparent url('/images/homepage/note-circle.png?1319722016') center bottom no-repeat;
+  background: transparent url('/images/homepage/note-circle.png?1319018090') center bottom no-repeat;
 }
 
 /* line 218, ../../../app/stylesheets/homepage.scss */
